fix(android): preserve accepted intent across peer quiescence